# refcheck

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  check_references.py  pyproject.toml
.github/workflows/: build-validation.yml  ci-cd.yml  continuous-integration.yml  lint-and-test.yml  publish-to-pypi.yml  release.yml
assets/: Understanding-Markdown-References.md  test_readme.md
docs/: Understanding-Markdown-References.md
refcheck/: check_references.py  log_conf.py  main.py  parsers.py  settings.py  utils.py  validators.py
tests/: sample_markdown.md  test_parsers.py  test_utils.py  test_validators.py
tests/test_validators/: test_file_exists.py  test_header_exists.py  test_is_valid_markdown_reference.py
