[tool.poetry]
name = "refcheck"
version = "0.0.0"  # Placeholder, real version comes from Git tags
description = "Tool for finding broken references and links in Markdown files."
authors = ["Sebastian Flum <sebastian.flum.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
commitizen = "^4.2.2"
python-semantic-release = "^9.20.0"
ruff = "^0.9.7"

[tool.poetry.scripts]
refcheck = "refcheck.main:main"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.5"   # Semantic Release will update this automatically
tag_format = "v$version"
update_changelog_on_bump = true

[tool.semantic_release]
version_source = "tag"  # Uses Git tags instead of modifying pyproject.toml
commit_version_number = false  # Don't commit version updates
branch = "main"
upload_to_pypi = true
upload_to_repository = "pypi"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
